﻿===== Hasor-Core v2.2.1 (2016-?)
* 新增:
    01.新增“.hasor.default.asEagerSingleton”配置用来配置默认情况下，类型是以单例模式运行还是以原型方式运行。（默认单例模式）
    02.ApiBinder接口新增“asEagerPrototype”方法用来强制以原型方式注册。到目前为止可以选择的方式有：“asEagerSingleton”、“asEagerPrototype”
    03.新增注解配置：@Singleton、@Prototype
* 改进:
    01.容器在启动时增加EventContext类型的绑定，开发的时候可以直接通过依赖注入或者appContext.getInstance(EventContext.class)方式的到。
    02.Event插件在接收到事件响应时，需要一直等待AppContext对象被注入进来。原有逻辑是等待10秒注入AppContext对象。

===== Hasor-Core v2.2.0 (2016-2-23)
* 新增:
    01.增加Event事件注册插件，简化时间的注册机制。
    02.Settings接口增加 addSetting方法和clearSetting方法用来增加和删除配置项。
    03.新增Spring插件，完美与Spring整合。同时支持与Spring的双向事件通知。
        - 支持Hasor的Bean通过Spring获取、支持SpringBean通过Hasor获取。
        - 支持Hasor的事件，通过Spring方式接收、支持Spring的事件，通过Hasor方式接收。
* 改进:
    01.改进事物管理器的拦截器注册机制，从拦截所有类改为只拦截标记了@Transactional注解的方法。
    02.ResourceModule插件的实现机制从 Servlet 改为Filter，当资源无法通过插件获取时候，转交给servlet容器。原有方案是直接抛除404。
    03.RestfulModule插件的实现机制从 Servlet 改为Filter，可以通过WebController类中renderTo方法指定具体要渲染的模版，模版渲染更加灵活。
    04.RestfulModule插件的实现机制从 Servlet 改为Filter，支持ContextMap中setViewName方法来指定渲染的模版。
    05.环境变量，WOR_HOME 从 USER.DIR 更换到 USER.HOME。原因是，USER.DIR 工作目录获取并不是想象的那样始终是在程序位置。
    06.SaxXmlParser类优化，在处理配置项冲突时，升级为保留全部配置。原有逻辑为合并覆盖。
    07.Event接口在传入参数时不再使用“Object[]”方式，改为范型T，这样做简化了开发者在使用事件机制时各种类型转换的麻烦，从而减少错误的概率。

===== Hasor-Core v2.1.0 (2016-01-17)
* 新增:
    01.增加一个WebDemo示例工程。
    02.新增一个插件，简化“modules.module”的配置。
    03.新增restful插件，做为hasor内置Web开发插件。
    04.添加templates插件，该插件将提供模版渲染支持。
* 改进:
    01.修改ShutdownHook钩子。在start时注册它、当shutdown时解除注册。
    02.增加Environment接口的包装器。
    03.为@Inject注解，增加Type枚举。通过枚举可以标识注入是：ByID 还是 ByName。
    04.剔除JSP自定义函数功能。
    05.resource插件在，选择缓存目录时，如果连续失败99999次。将会报一个错误，然后终止插件的启动。
    06.templates插件与resource插件，整合了mimetype插件功能。
    07.Valid插件增加@ValidDefine注解方式定义验证。
* 修复:
    01.Fix “Shutdown in progress”异常。
    02.Fix Web模式下启动空指针异常。
    03.Fix @Inject 注解携带value参数时失效的问题。
    04.Fix JdbcTemplate使用Result－>Object映射时，最后一个参数应设值丢失的问题。

===== Hasor-Core v2.0.0 (2015-11-27)
* 新增: